--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="download.png" type="img/x-icon">
+    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2023.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
@@ -50,7 +50,18 @@
     </div>
     <div class="hr"></div>
     <div class="mobile">
-        <div class="img2"></div>
+        <div class="img2"><img width="600" src="mobile-0819.jpg" alt="">
+        <div class="download">
+            <div class="download-img"><img width="60" src="boxshot.png" alt=""></div>
+            <div class="txt">
+                <h2>Stranger Things</h2>
+                <h3>Downloading...</h3>
+            </div>
+            <div class="animation">
+                <video width="50px" src="download animation.mp4" autoplay loop muted></video>
+            </div>
+        </div>
+        </div>
         <div class="text2">
             <h1>Download your shows to watch offline</h1>
             <h4>Save your favourites easily and always have something to watch.</h4>
