Added FAQ blocks

--- a/index.html
+++ b/index.html
@@ -89,7 +89,32 @@ phone, tablet, laptop, and TV.</h4></pre>
     <div class="hr"></div>
     <div class="ques">
         <h1>Frequently Asked Question</h1>
-        <p>Ready to watch? Enter your email to create or restart your membership.</p>
+        <div class="box1">
+            What is Netflix?
+            <i class="fa-solid fa-plus plus"></i>
+        </div>
+        <div class="box2 box">
+            How much does Netflix cost?
+            <i class="fa-solid fa-plus plus"></i>
+        </div>
+        <div class="box3 box">
+            Where can I watch?
+            <i class="fa-solid fa-plus plus"></i>
+        </div>
+        <div class="box4 box">
+            How do I cancel?
+            <i class="fa-solid fa-plus plus"></i>
+        </div>
+        <div class="box5 box">
+            What can I watch on Netflix?
+            <i class="fa-solid fa-plus plus"></i>
+        </div>
+        <div class="box6 box">
+                Is Netflix good for kids?
+            <i class="fa-solid fa-plus plus"></i>
+        </div>
+
+        <p class="mt">Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="email">
             <input class="email-input" type="email" placeholder="    Email address">
             <button class="gs-button">Get Started <i class="fa-solid fa-angle-right"></i></button>
