Changed hero section, font style and made cursors pointer

--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
                 </div>
             </div>
         </nav>
+        <div class="blackbg">
+        </div>
         <div class="hero">
-            <h1>The biggest Indian hits. The best Indian stories. All streaming here.</h1>
-            <h4>Watch anywhere. Cancel anytime.</h4>
+            <h1><pre>The biggest Indian hits. Ready to watch here from 
+₹149.</pre></h1>
+            <h4>Join Today. Cancel anytime.</h4>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
         </div>
         <div class="email">
             <input class="email-input" type="email" placeholder="    Email address">
             <button class="gs-button">Get Started <i class="fa-solid fa-angle-right"></i></button>
-        </div>
-        <div class="blackbg">
         </div>
     </div>
     <div class="hr"></div>
@@ -75,7 +76,7 @@
 phone, tablet, laptop, and TV.</h4></pre>
         </div>
         <div class="img3" ><img src="device-pile-in.png" alt="">
-            <div class="video2"><video width="400" src="netflix2 (online-video-cutter.com).mp4" autoplay loop muted></video></div>
+            <div class="video2"><video width="400" src="netflix2.mp4" autoplay loop muted></video></div>
         </div>    
     </div>
     <div class="hr"></div>
@@ -88,7 +89,7 @@ phone, tablet, laptop, and TV.</h4></pre>
     </div>
     <div class="hr"></div>
     <div class="ques">
-        <h1>Frequently Asked Question</h1>
+        <h1>Frequently Asked Questions</h1>
         <div class="box1">
             What is Netflix?
             <i class="fa-solid fa-plus plus"></i>
